# dumper

./: .gitignore  README.md
.github/workflows/: python-tests.yml
bot/: README.md
bot/dumper/: discord_client.py  logger.py  main.py  on_message_handler.py  on_ready_handler.py
src/: .gitignore  docker-compose.yml
src/analytical_application_server/: .gitignore  CMakeLists.txt  generate_static_config.js  static_config.yaml
src/analytical_application_server/server/: CMakeLists.txt  main.cpp
src/analytical_application_server/server/controllers/: message.cpp  message.hpp  message_handler.cpp  message_handler.hpp
src/analytical_application_server/server/controllers/common/: message_writer.hpp
src/analytical_application_server/server/models/: deserialization.cpp  deserialization.hpp  schema.hpp  serialization.cpp  serialization.hpp
src/discord_bot/: Dockerfile
src/discord_bot/dumper/: discord_client.py  logger.py  main.py
src/discord_bot/dumper/events/: on_message_handler.py  on_ready_handler.py
src/discord_bot/dumper/unit_tests/: events_tests.py
